gap fix

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -209,6 +209,16 @@ h1, h2, h3, h4{
   content: '<<';
 }
 
+.pagination .gap:before{
+  content: '...';
+
+  color: #2a6496;
+  font-weight: bold;
+}
+
+.pagination .gap span{
+  display: none;
+}
 
 
 /* form */
